--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "vllm==0.7.2",
     "wandb>=0.19.8",
     "xopen>=2.0.2",
+    "ray>=2.51.1",
+    "cupy-cuda13x",
+    "nixl",
 ]
 
 [tool.setuptools.packages.find]
